--- a/app/globals.css
+++ b/app/globals.css
@@ -3127,7 +3127,7 @@ a[data-footnote-ref] {
 
   .project-modal-content {
     flex-direction: row;
-    align-items: center;
+    align-items: stretch;
     height: 100%;
     width: 100%;
   }
